[project]
name = "image-processing-lxm"
version = "1.0.0"
description = "Personal resources for image-processing. "
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "cocoon",
    "numpy==1.26.*",
    "openimageio; sys_platform == 'win32'",
    "rawpy==0.19",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
]

[tool.uv.sources]
cocoon = { git = "https://github.com/MrLixm/cocoon.git" }
openimageio = { path = "vendor/OpenImageIO/OpenImageIO-2.2.18.0-cp310-cp310-win_amd64.whl", marker = "sys_platform == 'win32' and python_version == '3.10'" }
