[project]
name = "image-processing-lxm"
version = "1.0.0"
description = "Personal resources for image-processing. "
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "cocoon",
    "numpy==1.26.*",
    "openimageio==3.0.*",
    "rawpy==0.19",
]


[dependency-groups]
dev = [
    "black>=24.10.0",
]

[tool.uv]
package = true
# because we only specify a wheel for win32 yet
environments = ["sys_platform == 'win32'"]

[tool.uv.sources]
cocoon = { git = "https://github.com/MrLixm/cocoon.git" }
